WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244989
`contain:content` on the body breaks scrolling
https://bugs.webkit.org/show_bug.cgi?id=244989
Summary
`contain:content` on the body breaks scrolling
Simon Fraser (smfr)
Reported
2022-09-09 10:46:40 PDT
This page <
http://dataphys.org/list/wearable-abacus-from-the-qing-dynasty/
> has `body { contain: content; }` and is thus unscrollable in Safari (in a small window). This does not reproduce in Firefox or Chrome.
Attachments
Patch
(1.18 KB, patch)
2022-09-12 03:23 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(5.22 KB, patch)
2022-09-12 08:25 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-09-09 10:47:20 PDT
<
rdar://99248832
>
Rob Buis
Comment 2
2022-09-12 03:23:10 PDT
Created
attachment 462283
[details]
Patch
Rob Buis
Comment 3
2022-09-12 08:25:50 PDT
Created
attachment 462289
[details]
Patch
EWS Watchlist
Comment 4
2022-09-12 08:27:11 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Rob Buis
Comment 5
2022-09-13 05:38:55 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/35874
EWS
Comment 6
2022-09-15 00:56:08 PDT
Committed
254506@main
(2bf7fb96494b): <
https://commits.webkit.org/254506@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462289
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug