`contain:content` on the body breaks scrolling https://bugs.webkit.org/show_bug.cgi?id=244989

Reviewed by Simon Fraser.

Do not take paint containment into account when deciding
whether the viewport scrollbars needs to be enabled.

Behavior matches Firefox and Chrome.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-paint-050-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-paint-050-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/contain-paint-050.html: Added.
* Source/WebCore/page/FrameView.cpp:
(WebCore::FrameView::applyOverflowToViewport):

Canonical link: https://commits.webkit.org/254506@main